# ai-eng-test

./: ASSIGNMENT.md  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  prompting.py  retrieval.py  ui.py
data/: README.md  catalog.jsonl  sample_questions.json
