[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senior-ai-assignment-pack"
version = "0.1.0"
description = "Starter pack for a Senior AI Engineer retrieval assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich",
]

[project.scripts]
catalog-assistant = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
